--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@material/web": "^2.2.0",
+    "@mui/material": "^6.1.5",
+    "@mui/x-date-pickers": "^7.22.0",
+    "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
