--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@material/web": "^2.2.0",
     "@mui/material": "^6.1.5",
     "@mui/x-date-pickers": "^7.22.0",
+    "@react-oauth/google": "^0.12.1",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
+    "google-auth-library": "^9.14.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
