--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "@mui/material": "^6.1.5",
     "@mui/x-date-pickers": "^7.22.0",
     "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
-    "date-fns": "^2.29.3",
+    "date-fns": "^2.30.0",
     "google-auth-library": "^9.14.2",
     "googleapis": "^144.0.0",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@types/react": "^18.3.12",
+    "@types/react-big-calendar": "^1.15.0",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.2",
     "eslint": "^9.11.1",
