--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.5",
     "google-auth-library": "^9.14.2",
     "googleapis": "^144.0.0",
     "react": "^18.3.1",
