Reconfiguración de carpetas.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material/web": "^2.2.0",
     "@mui/material": "^6.1.5",
     "@mui/x-date-pickers": "^7.22.0",
+    "@react-google-maps/api": "^2.20.3",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
@@ -28,7 +29,8 @@
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-step-progress-bar": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
