--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-date-pickers": "^7.22.0",
     "@react-google-maps/api": "^2.20.3",
     "@react-oauth/google": "^0.12.1",
+    "ai": "^4.3.16",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
@@ -27,24 +28,33 @@
     "google-auth-library": "^9.14.2",
     "googleapis": "^144.0.0",
     "react": "^18.3.1",
+    "react-apple-emojis": "^3.0.0",
     "react-big-calendar": "^1.15.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-step-progress-bar": "^1.0.3"
+    "react-step-progress-bar": "^1.0.3",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@types/react": "^18.3.12",
     "@types/react-big-calendar": "^1.15.0",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
+    "sass": "^1.89.2",
+    "sass-embedded": "^1.89.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-plugin-purgecss": "^0.2.13"
   }
 }
